# neural-network-python

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: Käyttöohje.md  Määrittelydokumentti.md  Testausdokumentti.md  Toteutusdokumentti.md  Viikkoraportti 1.md  Viikkoraportti 2.md  Viikkoraportti 3.md  Viikkoraportti 4.md  Viikkoraportti 5.md  Viikkoraportti 6.md
src/: digits.py  network.py
src/tests/: network_test.py
