[project]
name = "neural-network-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pytest = "^8.3.5"
coverage = "^7.8.0"

