[project]
name = "neural-network-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)"
]

[dependency-groups]
dev = [
    "pylint (>=4.0.0,<5.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "coverage (>=7.11.0,<8.0.0)"
]
run = [
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
